Added basic structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   <body>
     <h1>AI Recipe Generator</h1>
     <footer>
-      AI Recipe Generator is coded by Senay Yakut and hosted on Netlify
+      AI Recipe Generator was coded by
+      <a href="https://github.com/SenayYakut" target="_blank">Senay Yakut</a> is
+      open-sourced on
+      <a
+        href="https://github.com/SenayYakut/AI-Recipe-Generator"
+        target="_blank"
+        >GitHub</a
+      >
+      and is hosted on
+      <a
+        href="https://ai-recipe-generator-by-senayyakut.netlify.app"
+        target="_blank"
+        >Netlify</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
