--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>AI Recipe Generator</title>
   </head>
   <body>
-    <h1>AI Recipe Generator</h1>
+    <header><h1>AI Recipe Generator</h1></header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter a recipe"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        Title. Description. Preparation and cooking time. Number of servings and
+        serving size. List of ingredients with accurate measurements.
+        Step-by-step directions. Accurate nutrition information. Notes and FAQ.
+      </div>
+    </main>
     <footer>
       AI Recipe Generator was coded by
       <a href="https://github.com/SenayYakut" target="_blank">Senay Yakut</a> is
