Added the AI API integration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>AI Recipe Generator</title>
   </head>
   <body>
@@ -14,11 +15,12 @@
         <form id="recipe-generator">
           <input
             type="text"
-            placeholder="Enter a recipe"
+            placeholder="Enter a food name"
             autofocus
             required
             autocomplete="off"
             class="enter-button"
+            id="input-button"
           />
           <input type="submit" class="submit-button" />
         </form>
