Added a new placeholder for input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <form id="recipe-generator">
             <input
               type="text"
-              placeholder="Enter a food name"
+              placeholder="Enter a desired meal name"
               autofocus
               required
               autocomplete="off"
